--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     
-    <!----------------- Nav ------------------->
-    <nav>
+    <div class="todoistContainer">
+        <!----------------- Nav ------------------->
 
         <div class="navBar">
 
@@ -49,7 +49,17 @@
 
         </div>
 
-    </nav>
+        <!-- ----------------todoist body---------------- -->
+        <div class="todoist">
+
+            <div class="todoistHeader">
+                <h1 class="time">Today</h1>
+                <h1 class="noOfTasks">5</h1>
+            </div>
+
+        </div>
+
+    </div>
 
 </body>
 </html>
