--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="navBar">
 
-            <div class="navHeader">
+            <div class="navHeader Header">
                 <h2 class="navTitle">Menu</h2>
                 <h3 class="navIcon">
                     <i class='bx bx-menu'></i>
@@ -56,6 +56,53 @@
                 <h1 class="time">Today</h1>
                 <h1 class="noOfTasks">5</h1>
             </div>
+
+            <div class="addtaskContainer">
+                <div class="addTaskBtn"><i class='bx bx-plus'></i>Add a new Task</div>
+            </div>
+
+            <div class="taskContainer">
+                
+                <div class="tasks">
+                    <div class="taskTitle">
+                        <h5>CS Quiz and Assignment</h5>
+                        <i class='bx bx-chevron-right'></i>
+                    </div>
+    
+                    <div class="taskSpecs">
+                        <div class="taskDueDate"><i class='bx bx-calendar-x'></i>10-6-23</div>
+                        <div class="taskCatagory"><i class='bx bxs-user-circle'></i>Personal</div>
+                        <div class="taskPriority"><i class='bx bxs-flag-alt' style='color:#ff1c1c' ></i>Priority 1</div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- -----------------------task customizer------------------------- -->
+        <div class="taskCustomizerContainer">
+
+            <div class="customizerHeader Header">
+                <h2 class="customizerTitle">Task:</h2>
+                <h3 class="customizerIcon">
+                    <i class='bx bx-x'></i>
+                </h3>
+            </div>
+
+            <form action="">
+
+                <div class="input--title"><input type="text"></div>
+                <div class="input--description"><textarea name="input--description" cols="30" rows="10"></textarea></div>
+                <div class="input--catagory">List </div>
+                <div class="input--due__date">Due Date <input type="date" name="input--due__date"></div>
+                <div class="priorityBtn">
+                    <div class="priority1 btn">priority 1</div>
+                    <div class="priority2 btn">priority 2</div>
+                    <div class="priority3 btn">priority 3</div>
+                </div>
+
+            </form>
 
         </div>
 
