task customizer half

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                 </h3>
             </div>
 
-            <form action="">
+            <form class="input--customization" action="">
 
-                <div class="input--title"><input type="text"></div>
-                <div class="input--description"><textarea name="input--description" cols="30" rows="10"></textarea></div>
-                <div class="input--catagory">List </div>
-                <div class="input--due__date">Due Date <input type="date" name="input--due__date"></div>
-                <div class="priorityBtn">
+                <div class="input--title input"><input type="text" placeholder="Title"></div>
+                <div class="input--description input"><textarea name="input--description" cols="" rows="10" placeholder="Description"></textarea></div>
+                <div class="input--catagory input">List </div>
+                <div class="input--due__date input">Due Date <input type="date" name="input--due__date"></div>
+                <div class="priorityBtn input">
                     <div class="priority1 btn">priority 1</div>
                     <div class="priority2 btn">priority 2</div>
                     <div class="priority3 btn">priority 3</div>
