website theme change

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="taskContainer">
                 
-                <div class="tasks">
+                <!-- <div class="tasks">
                     <div class="taskTitle">
                         <h5>CS Quiz</h5>
                         <i class='bx bx-chevron-right'></i>
@@ -74,7 +74,7 @@
                     <div class="taskSpecs">
                         <div class="taskDueDate"><i class='bx bx-calendar-x'></i>10-6-23</div>
                         <div class="taskCatagory"><i class='bx bxs-user-circle'></i>Personal</div>
-                        <div class="taskPriority"><i class='bx bxs-flag-alt' style='color:#ff1c1c' ></i>Priority 1</div>
+                        <div class="taskPriority"><i class='bx bxs-flag-alt'></i>Priority 1</div>
                     </div>
                 </div>
                 
@@ -87,9 +87,9 @@
                     <div class="taskSpecs">
                         <div class="taskDueDate"><i class='bx bx-calendar-x'></i>10-6-23</div>
                         <div class="taskCatagory"><i class='bx bxs-user-circle'></i>Personal</div>
-                        <div class="taskPriority"><i class='bx bxs-flag-alt' style='color:#ff1c1c' ></i>Priority 1</div>
+                        <div class="taskPriority"><i class='bx bxs-flag-alt'></i>Priority 1</div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
