--- a/index.html
+++ b/index.html
@@ -114,15 +114,25 @@
                         <option value="">--Select Catagory--</option>
                         <option value="Personal">Personal</option>
                         <option value="Study">Study</option>
-                        <option value="List1">List 1</option>
+                        <option value="List 1">List 1</option>
                     </select>
                 </div>
                 <div class="input--due__date input">Due Date <input class="dueDate--input" type="date" name="input--due__date"></div>
-                <div class="priorityBtn input">
+                <!-- <div class="priorityBtn input">
                     <button class="priority--input priority1 btn" value="priority 1">priority 1</button>
                     <button class="priority--input priority2 btn" value="priority 2">priority 2</button>
                     <button class="priority--input priority3 btn" value="priority 3">priority 3</button>
+                </div> -->
+                <div class="input--priority input">Priority 
+                    <select class="priority--input" name="priority--selection">
+                        <option class="pri" value="">--Select priority--</option>
+                        <option class="pri" value="Priority 1">Priority 1</option>
+                        <option class="pri" value="Priority 2">Priority 2</option>
+                        <option class="pri" value="Priority 3">Priority 3</option>
+                    </select>
                 </div>
+
+                <div class="space"></div>
 
                 <div class="input--save">
                     <div class="delete--task btn btnLg">Delete Task</div>
