if title empty no task will add

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <form class="input--customization" onsubmit="getTaskEditorData()" action="">
 
-                <div class="input--title input"><input class="title--input" type="text" name="title" placeholder="Title"></div>
+                <div class="input--title input"><input class="title--input" type="text" name="title" placeholder="Title" required></div>
                 <div class="input--description input"><textarea class="description--input" name="input--description" cols="" rows="10" placeholder="Description"></textarea></div>
                 <div class="input--catagory input">Catagory 
                     <select class="catagory--input" name="catagory--selection">
