clock added and menu disable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="todoistContainer">
         <!----------------- Nav ------------------->
 
-        <div class="navBar">
+        <!-- <div class="navBar">
 
             <div class="navHeader Header">
                 <h2 class="navTitle">Menu</h2>
@@ -49,14 +49,14 @@
                 </ul>
             </div>
 
-        </div>
+        </div> -->
 
         <!-- ----------------todoist body---------------- -->
         <div class="todoist">
 
             <div class="todoistHeader">
                 <h1 class="time">Today</h1>
-                <h1 class="noOfTasks">5</h1>
+                <h1>Tasks <span class="noOfTasks">5</span></h1>
             </div>
 
             <div class="addtaskContainer">
